user-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: user-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: user-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - user-gateway
  http:
    - match:
        - uri:
            prefix: /user
      route:
        - destination:
            host: user
            port:
              number: 3000
